--- a/workspace/hospital_management/views/docName.xml
+++ b/workspace/hospital_management/views/docName.xml
@@ -9,17 +9,18 @@
 				</header>
 				<sheet>
 					<div class="oe_button_box" name="button_box" >
-		                <button name="action_open_patients" type="object" icon="fa-sitemap" class="oe_stat_button">
+		                <button name="action_open_patients" type="object" icon="fa-id-card-o" class="oe_stat_button">
 		                	<div class="o_stat_value">
-		                    	<field string="count" name="no_of_apps" widget="statinfo"/>
+		                    	<field string="count" name="no_of_apps" widget="statinfo" />
 		                    	<span class="o_stat_text">Appointments</span>
 		                	</div>
 		                </button>
 		            </div>
 					<group >    
 						<group >
-							<field name="name" attrs="{'readonly':[('name','=','Dr. Pinkal')]}"/>
-							<field name="degrees_ids"  attrs="{'readonly':[('name','=','Dr. Pinkal')]}"/>
+							<field name="name" 
+								attrs="{'readonly':[('name','=','Dr. Pinkal')]}"/>
+							<field name="degrees_ids" widget="many2many_tags"/>  <!-- attrs="{'readonly':[('name','=','Dr. Pinkal')]}"/> -->
 						</group>
 						<group>
 						     <field name="belongsTo" attrs="{'readonly':[('name','=','Dr. Pinkal')]}"/>
