--- a/workspace/hospital_management/views/billView.xml
+++ b/workspace/hospital_management/views/billView.xml
@@ -10,7 +10,10 @@
                 </header>
                 <sheet>
                     <group>
-                        <field name="name"/>
+                        <field name="name_id"/>
+                        <field name="billDate"/>
+                        <field name="charge"/>
+                        <field name="bill"/>
                     </group>
                 </sheet>
             </form>
@@ -22,7 +25,7 @@
         <field name="model">patient.bill</field>
         <field name="arch" type="xml">
            <tree>
-              <field name="name"/>
+              <field name="name_id"/>
               <!-- <field name="speciality"></field>  -->
            </tree>
         </field>
