--- a/workspace/hospital_management/views/menu.xml
+++ b/workspace/hospital_management/views/menu.xml
@@ -182,6 +182,20 @@
         </field>
     </record>
 
+        <!--     Beds   Allocation      -->
+    <record id="action_room" model="ir.actions.act_window">
+        <field name="name">Room</field>
+        <field name="type">ir.actions.act_window</field>
+        <field name="res_model">patient.room</field>
+        <field name="view_mode" >tree,form</field>
+        <field name="context">{}</field>
+        <field name="help" type="html">
+            <p class="o_view_nocontent_smiling_face">
+                Create your patient Room   
+            </p>
+        </field>
+    </record>
+
 
 
             <!--        m  e  n  u  i  t  e  m  s          -->
@@ -282,11 +296,20 @@
 
     <!-- Products menu-->
 
-    <menuitem id="menu_products" 
+    <!-- <menuitem id="menu_products" 
                 name='products'
                 parent='main_menu'
-                action="action_products"
-                sequence=''/>
+                sequence='6'/>
+                action="action_products" --> -->
+
+
+    <!-- Beds menu-->
+
+     <menuitem id="menu_room" 
+                name='rooms'
+                parent='menu_patient_master'
+                action="action_room"
+                sequence='3'/>
 
 
 
