--- a/workspace/hospital_management/views/patientView.xml
+++ b/workspace/hospital_management/views/patientView.xml
@@ -28,14 +28,14 @@
                             <field name="city"></field>
                             <field name="mo_number"></field>
                             <field name="doc_id"></field>
+                            <field name="refBy_ids" widget="many2many_tags"></field>
                             <!-- <field name="symptoms_ids" widget="many2many_tags"></field> -->
-                            <!-- <field name="agg"></field> -->
                         </group>
                         <group>
                             <field name="birthdate"></field>
                             <field name="gender" widget="radio"></field> 
                             <field name="catagory"></field>
-                            <field name="pAppID"></field>
+                            <!-- <field name="pAppID"></field> -->
                             <field name="blood"></field>
                             <!-- <field name="females"></field> -->
                         </group>
